[tool.poetry]
name = "templatte"
version = "0.1.0"
description = "Crafting Configurations Like a Barista"
authors = ["elihu"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
templatte = "templatte.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.1.0"}
getpass4 = "^0.0.14.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
